first steps css

--- a/hero.html
+++ b/hero.html
@@ -13,11 +13,11 @@
       just a holder for the images
     </div>
       <h3 id="message-area">Welcome, hero. You are confronted by the Moral Dilemma of Violence.</h3>
-      <div id="hero-run" class="character run">
-        <a href="index.html">Run</a>
+      <div id="hero-heal" class="character-action heal">
+        <h4>Heal</h4>
       </div>
-      <div id="hero-fight" class="character fight">
-        <a href="#">Attack</a>
+      <div id="hero-fight" class="character-action attack">
+        <h4>Attack</h4>
       </div>
   </div>
 </div>  <!--//container-->
