--- a/villain.html
+++ b/villain.html
@@ -13,11 +13,11 @@
     <div class="fight-image">
       just a holder for the images
     </div>
-            <h3 id="message-area">Welcome, villain. You are confronted by Self Awareness.</h3>
-      <div id="villain-run" class="character run">
-        <a href="index.html">Run</a>
+      <h3 id="message-area">Welcome, villain. You are confronted by Self Awareness.</h3>
+      <div id="villain-heal" class="character-action heal">
+        <h4>Heal</h4>
       </div>
-      <div id="villain-fight" class="character fight">
+      <div id="villain-fight" class="character-action attack">
         <h4>Attack</h4>
       </div>
   </div>
