finding source of image problem

--- a/hero.html
+++ b/hero.html
@@ -10,7 +10,7 @@
 <div class="container hero">
   <div class="game-container">
     <div class="fight-image">
-      just a holder for the images
+      <img src="img/spiral.png" />
     </div>
       <h3 id="message-area">Welcome, hero. You are confronted by the Moral Dilemma of Violence.</h3>
       <div id="hero-heal" class="character-action heal">
