--- a/villain.html
+++ b/villain.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div class="container villain">
+  <div id="player-data" class="player-data-display">
+    placeholder for displaying player hp
+  </div>
   <div class="game-container">
     <div class="fight-image">
       just a holder for the images
