changes for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lora" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css" />
   <script type = "text/javascript" src="basic.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="container home">
