--- a/hero.html
+++ b/hero.html
@@ -5,6 +5,7 @@
   <title>Heroes and Villains</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lora" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="container hero">
