--- a/villain.html
+++ b/villain.html
@@ -5,6 +5,7 @@
   <title>Heroes and Villains</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lora" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <script type="text/javascript" src="js/villain.js"></script> -->
 </head>
 <body>
@@ -14,7 +15,7 @@
   </div>
   <div class="game-container">
     <div class="fight-image">
-      just a holder for the images
+      <img src="img/mirror.png" />
     </div>
       <h3 id="message-area">Welcome, villain. You are confronted by Self Awareness.</h3>
       <div id="villain-heal" class="character-action heal">
