changes to messages, playing with mobile.

--- a/villain.html
+++ b/villain.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <div class="container villain">
-  <div id="player-data" class="player-data-display">
-    placeholder for displaying player hp
+  <div id="player-data" class="player-data">
+    <h3>HP: <span id="player-hp">20</span></h3>
+    <h3>Potions: <span id="player-potions">4</span></h3>
   </div>
   <div class="game-container">
     <div class="fight-image">
