--- a/hero.html
+++ b/hero.html
@@ -10,6 +10,10 @@
 
 <body>
 <div class="container hero">
+  <div id="player-data" class="player-data">
+    <h3>HP: <span id="player-hp">20</span></h3>
+    <h3>Potions: <span id="player-potions">4</span></h3>
+  </div>
   <div class="game-container">
     <div class="fight-image">
       <img src="img/spiral.png" />
