--- a/hero.html
+++ b/hero.html
@@ -25,6 +25,11 @@
       <div id="hero-fight" class="character-action attack">
         <h4>Attack</h4>
       </div>
+      <a href="index.html" id="restart-button" class="hidden">
+        <div class="start-over">
+          <h4 id="start-over">hi</h4>
+        </div>
+      </a>
   </div>
 </div>  <!--//container-->
 <script type="text/javascript" src="js/hero.js"></script>
