--- a/villain.html
+++ b/villain.html
@@ -26,6 +26,12 @@
       <div id="villain-fight" class="character-action attack">
         <h4>Attack</h4>
       </div>
+      <a href="index.html" id="restart-button" class="hidden">
+        <div class="start-over">
+          <h4 id="start-over">hi</h4>
+        </div>
+      </a>
+
   </div>
 </div>  <!--//container-->
 <script type="text/javascript" src="js/villain.js"></script>
