message tweaks, trying to fix restart button styles.

--- a/hero.html
+++ b/hero.html
@@ -25,7 +25,7 @@
       <div id="hero-fight" class="character-action attack">
         <h4>Attack</h4>
       </div>
-      <a href="index.html" id="restart-button" class="hidden">
+      <a href="index.html" id="restart-button" class="restart hidden">
         <div class="start-over">
           <h4 id="start-over">hi</h4>
         </div>
