--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Heroes and Villains</title>
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lora" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css" />
-  <script type = "text/javascript" src="basic.js"></script>
-
 </head>
 <body>
 <div class="container home">
@@ -25,6 +23,5 @@
         </a>
   </div>
 </div>  <!--//container-->
-<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
